--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "watch": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test-watch": "jest --watch",
     "start": "node src/server.js"
   },
   "keywords": [],
@@ -14,9 +15,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.3.10",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest": "^29.5.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
