--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "watch": "nodemon src/server.js",
     "test": "jest",
     "test-watch": "jest --watch",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,8 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.3.10",
     "express": "^4.18.2",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "pm2": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
