--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "csv-parse": "^5.3.10",
     "express": "^4.18.2",
     "jest": "^29.5.0",
+    "mongoose": "^7.1.1",
     "pm2": "^5.3.0"
   },
   "devDependencies": {
