--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "csv-parse": "^5.3.10",
     "express": "^4.18.2",
