--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "jest": "^29.5.0",
     "mongoose": "^7.1.1",
+    "morgan": "^1.10.0",
     "pm2": "^5.3.0"
   },
   "devDependencies": {
